tests/fixtures/type-error/expected-stderr.txt
✗ Test discovery failed (exit 3).
Compiling... errored
error: Fatal (Frontend): Failed compilation to ULLBC:
   Compiling type-error v0.1.0 (CRATE_DIR)
error[E0308]: mismatched types
 --> src/lib.rs:6:5
  |
5 | pub fn flip(b: bool) -> bool {
  |                         ---- expected `bool` because of return type
6 |     "not a bool"
  |     ^^^^^^^^^^^^ expected `bool`, found `&str`

For more information about this error, try `rustc --explain E0308`.
ERROR Code failed to compile
error: could not compile `type-error` (lib) due to 1 previous error
